--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <label for="password">password</label>
             <input class="textbox" type="password" name="password" required>
             <input class="button" type="submit" name="submitBtn" value="login">
+            <span id="login-error" style="color: red;"></span>
             <label for="submitBtn">don't have an account? <a href="signup.html">Sign Up</a></label>
         </form>
     </div>
